<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="v1livepusher_audio_quality">音质选择</string>
    <string name="v1livepusher_setting">设置</string>
    <string name="v1livepusher_close">关闭</string>
    <string name="v1livepusher_copy_play_url">复制直播地址</string>
    <string name="v1livepusher_another_phone_scan_or_copy">用另外一台手机扫码或复制地址进行播放测试</string>
    <string name="v1livepusher_play_url_generated_success">播放地址生成成功</string>
    <string name="v1livepusher_start_push">开始推流</string>
    <string name="v1livepusher_have_push_url">我有推流地址</string>
    <string name="v1livepusher_auto_fetch_url">自动生成推流地址</string>
    <string name="v1livepusher_play_hint">你需要a，b两台手机进行测试</string>
    <string name="v1livepusher_play_hint_1">①a手机生成推流地址录制</string>
    <string name="v1livepusher_play_hint_2">②b手机输入推流地址或扫码拉流并播放测试</string>
    <string name="v1liveplayer_title_live_player">直播播放器</string>
    <string name="v1livepusher_capture_frame">采集帧率</string>
    <string name="v1livepusher_cycle_send">循环发送</string>
    <string name="v1livepusher_live_player">直播播放器</string>
    <string name="v1livepusher_item_other_tools">其他工具</string>
    <string name="v1livepusher_item_live_pusher">直播推流 V1</string>
    <string name="v1livepusher_item_live_pusher_video">视频分享 V1</string>
    <string name="v1livepusher_item_live_pusher_screen">屏幕分享 V1</string>
    <string name="v1livepusher_item_live_player">直播拉流 V1</string>
    <string name="v1livepusher_item_link_mic">连麦演示 V1</string>
    <string name="v1livepusher_open_beauty">开启美颜</string>
    <string name="v1livepusher_flv">flv</string>
    <string name="v1livepusher_rtmp">rtmp</string>
    <string name="v1livepusher_hls">hls</string>
    <string name="v1livepusher_pusher_settings">直播设置</string>
    <string name="v1livepusher_enter">进入</string>
    <string name="v1livepusher_return">返回</string>
    <string name="v1livepusher_type_and_android_version">机型:%s Android系统版本:%s</string>
    <string name="v1livepusher_encoding_rate">编码码率：0kbps</string>
    <string name="v1livepusher_fps_and_gop">FPS：0  GOP：0s</string>
    <string name="v1livepusher_stage_one">阶段一：检查地址合法性</string>
    <string name="v1livepusher_stage_two">阶段二：连接到云服务器</string>
    <string name="v1livepusher_stage_three">阶段三：摄像头打开成功</string>
    <string name="v1livepusher_stage_four">阶段四：编码器正常启动</string>
    <string name="v1livepusher_stage_five">阶段五：开始进入推流中...</string>
    <string name="v1livepusher_loop_times">循环次数：</string>
    <string name="v1livepusher_online_music">在线音乐？</string>
    <string name="v1livepusher_mic_volume">MIC音量:</string>
    <string name="v1livepusher_bgm_volume">BGM音量:</string>
    <string name="v1livepusher_bgm_tone">BGM音调:</string>
    <string name="v1livepusher_bgm_seek">BGMSeek:</string>
    <string name="v1livepusher_time">时间:</string>
    <string name="v1livepusher_play">播放</string>
    <string name="v1livepusher_pause">暂停</string>
    <string name="v1livepusher_resume">恢复</string>
    <string name="v1livepusher_finish">结束</string>
    <string name="v1livepusher_bad_network_tip">当前网络质量很糟糕，建议您拉近离路由器的距离，避免WiFi穿墙！</string>
    <string name="v1livepusher_rtmp_play_address">RTMP 播放地址</string>
    <string name="v1livepusher_flv_play_address">FLV 播放地址</string>
    <string name="v1livepusher_hls_play_address">HLS 播放地址</string>
    <string name="v1livepusher_rtmp_accelerating_flow_address">RTMP 加速流地址</string>
    <string name="v1livepusher_open_privacy_mode">开启隐私模式</string>
    <string name="v1livepusher_open_mute_mode">开启静音模式</string>
    <string name="v1livepusher_open_horizontal_mode">开启横屏推流</string>
    <string name="v1livepusher_open_debug_info">开启调试信息</string>
    <string name="v1livepusher_open_watermark">添加图像水印</string>
    <string name="v1livepusher_open_only_audio_push">开启纯音频推流</string>
    <string name="v1livepusher_open_audience_mirror">开启观看端镜像</string>
    <string name="v1livepusher_open_back_flash">开启后置闪光灯</string>
    <string name="v1livepusher_manual_click_exposure_focus">手动点击曝光对焦</string>
    <string name="v1livepusher_gesture_zoom_preview_screen">手势放大预览画面</string>
    <string name="v1livepusher_local_screenshot">本地截图</string>
    <string name="v1livepusher_screenshot">截图</string>
    <string name="v1livepusher_send_message">发送消息</string>
    <string name="v1livepusher_send">发送</string>
    <string name="v1livepusher_cyclic_send">循环发送</string>
    <string name="v1livepusher_picture_quality_preference">画质偏好</string>
    <string name="v1livepusher_reverberation">混响</string>
    <string name="v1livepusher_voice_changer">变声</string>
    <string name="v1livepusher_acquisition_frame_rate">采集帧率</string>
    <string name="v1livepusher_turn_on_hardware_acceleration">开启硬件加速</string>
    <string name="v1livepusher_enable_bandwidth_adaptation">开启带宽自适应</string>
    <string name="v1livepusher_turn_on_ear_loopback">开启耳返</string>
    <string name="v1livepusher_freeze_warning">卡顿警告：出现卡顿 0ms</string>
    <string name="v1livepusher_video_quality">画质</string>
    <string name="v1livepusher_please_start_play">请先开始播放</string>
    <string name="v1livepusher_switch_h264_toast">切换到 H264 播放</string>
    <string name="v1livepusher_switch_h265_toast">切换到 H265 播放</string>
    <string name="v1livepusher_permissions_camera_mic">请打开摄像头和麦克风权限</string>
    <string name="v1livepusher_leb">快直播</string>
    <string name="v1livepusher_primary_clip">已添加至剪切板</string>
    <string name="v1livepusher_fetch_url">地址获取中</string>
    <string name="v1livepusher_input_push_url">请输入推流地址</string>
    <string name="v1livepusher_screen_primary_clip">已添加至剪切板</string>
    <string name="v1livepusher_start_step1">阶段一</string>
    <string name="v1livepusher_start_step1_value">检查地址合法性</string>
    <string name="v1livepusher_start_step2">阶段二</string>
    <string name="v1livepusher_start_step2_value">解码器正常启动</string>
    <string name="v1livepusher_start_step3">阶段三</string>
    <string name="v1livepusher_start_step3_value">成功连接到服务器</string>
    <string name="v1livepusher_start_step4">阶段四</string>
    <string name="v1livepusher_start_step4_value">视频播放开始</string>
    <string name="v1livepusher_start_step5">阶段五</string>
    <string name="v1livepusher_start_step5_value">收到首帧视频数据</string>
    <string name="v1livepusher_camera">请先打开摄像头权限</string>
    <string name="v1livepusher_audio_quality_speech">语音</string>
    <string name="v1livepusher_audio_quality_default">标准</string>
    <string name="v1livepusher_audio_quality_music">音乐</string>
    <string name="v1livepusher_empty_message">发送消息</string>
    <string name="v1livepusher_receive_event">receive event: </string>
    <string name="v1livepusher_pushing_start_stop_retry_push">当前正在推流，启动或关闭缩放需要重新推流</string>
    <string name="v1livepusher_pushing_start_stop_retry_push_by_focus">当前正在推流，启动或关闭手动对焦需要重新推流</string>
    <string name="v1livepusher_screenshot_success">截图成功</string>
    <string name="v1livepusher_screenshot_fail">截图失败</string>
    <string name="v1livepusher_screenshot_fail_push">截图失败，请先发起推流</string>
    <string name="v1livepusher_share_pic">图片分享</string>
    <string name="v1livepusher_network_warning_hint">当前网络质量很糟糕，建议您拉近离路由器的距离，避免WiFi穿墙！</string>
    <string name="v1livepusher_local_snapshot">本地截图</string>
    <string name="v1livepusher_snapshot">截图</string>
    <string name="v1livepusher_check_url">检查地址合法性</string>
    <string name="v1livepusher_url_illegal">推流地址不合法，目前支持rtmp推流!</string>
    <string name="v1livepusher_license_check_fail">License 校验失败</string>
    <string name="v1livepusher_license_click_info"> 详情请点击[</string>
    <string name="v1livepusher_license_click_use_info"> 详情请点击[License 使用指南</string>
    <string name="v1livepusher_push_fail">推流失败</string>
    <string name="v1livepusher_comfirm">确定</string>
    <string name="v1livepusher_hardcode">编码器正常启动[硬编]</string>
    <string name="v1livepusher_softcode">编码器正常启动[软编]</string>
    <string name="v1livepusher_coding_rate">编码码率</string>
    <string name="v1livepusher_upload_speed">上传网速</string>
    <string name="v1livepusher_model">机型</string>
    <string name="v1livepusher_version">Android系统版本</string>
    <string name="v1livepusher_fps">FPS</string>
    <string name="v1livepusher_gop">GOP</string>
    <string name="v1livepusher_step1">阶段一</string>
    <string name="v1livepusher_step1_value">检查地址合法性</string>
    <string name="v1livepusher_step2">阶段二</string>
    <string name="v1livepusher_step2_value">连接到云服务器</string>
    <string name="v1livepusher_step3">阶段三</string>
    <string name="v1livepusher_step3_value">摄像头打开成功</string>
    <string name="v1livepusher_step4">阶段四</string>
    <string name="v1livepusher_step4_value">编码器正常启动</string>
    <string name="v1livepusher_step5">阶段五</string>
    <string name="v1livepusher_step5_value">开始进入推流中...</string>
    <string name="v1livepusher_screen_toast_please_start_up_push">推流尚未启动！请启动推流！</string>
    <string name="v1livepusher_screen_cancel">取消录屏推流</string>
    <string name="v1livepusher_screen_push_tip">正在录屏推流中...</string>
    <string name="v1livepusher_screen_camera">请先打开摄像头权限</string>
    <string name="v1livepusher_screen_camera_storage_mic">请先打开摄像头,麦克风和存储权限</string>
    <string name="v1livepusher_screen_push">录屏推流</string>
    <string name="v1livepusher_screen_tv_resolution_portrait">竖屏模式</string>
    <string name="v1livepusher_screen_tv_resolution_landscape">横屏模式</string>
    <string name="v1livepusher_screen_tv_resolution_mode">推流模式</string>
    <string name="v1livepusher_screen_rb_video_super">超清</string>
    <string name="v1livepusher_screen_rb_video_stand">标清</string>
    <string name="v1livepusher_screen_rb_video_high">高清</string>
    <string name="v1livepusher_screen_tv_video_quality">画质选择</string>
    <string name="v1livepusher_screen_start_screen_push">开始录屏推流</string>
    <string name="v1livepusher_screen_stop_screen_push">结束录屏推流</string>
    <string name="v1livepusher_screen_auto_fetch_url">自动生成推流地址</string>
    <string name="v1livepusher_screen_have_push_url">我有推流地址</string>
    <string name="v1livepusher_screen_input_push_url">请输入推流地址</string>
    <string name="v1livepusher_screen_tv_generate_play_url_success">播放地址生成成功</string>
    <string name="v1livepusher_screen_tv_use_another_phone_to_play">用另外一台手机扫码或复制地址进行播放测试</string>
    <string name="v1livepusher_screen_tv_copy_the_play_url">复制直播地址</string>
    <string name="v1livepusher_screen_btn_close">关闭</string>
    <string name="v1livepusher_local_file_not_exists">本地BGM文件不存在</string>
</resources>