<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FF13233F"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/v1livepusher_play_url_generated_success"
        android:textColor="@color/v1livepusher_white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/v1livepusher_another_phone_scan_or_copy"
            android:textColor="@color/v1livepusher_text_gray"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <com.tencent.liteav.v1livepusherdemo.view.RadioButton
                android:id="@+id/v1livepusher_rb_flv"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/v1livepusher_flv" />

            <com.tencent.liteav.v1livepusherdemo.view.RadioButton
                android:id="@+id/v1livepusher_rb_rtmp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/v1livepusher_rtmp" />

            <com.tencent.liteav.v1livepusherdemo.view.RadioButton
                android:id="@+id/v1livepusher_rb_hls"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/v1livepusher_hls" />

            <com.tencent.liteav.v1livepusherdemo.view.RadioButton
                android:id="@+id/v1livepusher_rb_realtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="34dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <com.tencent.liteav.v1livepusherdemo.view.RadioButton
                android:id="@+id/v1livepusher_rb_leb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/v1livepusher_iv_qr_code"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:background="@color/v1livepusher_white"
        android:padding="4dp" />

    <LinearLayout
        android:id="@+id/v1livepusher_ll_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:background="@drawable/v1livepusher_copy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/v1livepusher_copy_play_url"
            android:textColor="@color/v1livepusher_text_gray"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/v1livepusher_text_gray" />

    <Button
        android:id="@+id/v1livepusher_btn_close"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FF13233F"
        android:text="@string/v1livepusher_close"
        android:textColor="#FF0062E3"
        android:textSize="16sp" />

</LinearLayout>
